--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>angular-jwt</artifactId>
-    <version>0.0.6-SNAPSHOT</version>
+    <version>0.0.6</version>
     <name>angular-jwt</name>
     <description>WebJar for angular-jwt</description>
     <url>http://webjars.org</url>
@@ -53,7 +53,7 @@
         <url>http://github.com/webjars/angular-jwt</url>
         <connection>scm:git:https://github.com/webjars/angular-jwt.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/angular-jwt.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>angular-jwt-0.0.6</tag>
     </scm>
     
     <dependencies>
