--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>angular-jwt</artifactId>
-    <version>0.1.9-SNAPSHOT</version>
+    <version>0.1.9</version>
     <name>angular-jwt</name>
     <description>WebJar for angular-jwt</description>
     <url>http://webjars.org</url>
@@ -53,7 +53,7 @@
         <url>http://github.com/webjars/angular-jwt</url>
         <connection>scm:git:https://github.com/webjars/angular-jwt.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/angular-jwt.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>angular-jwt-0.1.9</tag>
     </scm>
     
     <dependencies>
@@ -76,9 +76,9 @@
                         <goals><goal>run</goal></goals>
                         <configuration>
                             <target>
-                                <mkdir dir="${destDir}"/>
-                                <get src="${upstream.url}/angular-jwt.js" dest="${destDir}"/>
-                                <get src="${upstream.url}/angular-jwt.min.js" dest="${destDir}"/>
+                                <mkdir dir="${destDir}" />
+                                <get src="${upstream.url}/angular-jwt.js" dest="${destDir}" />
+                                <get src="${upstream.url}/angular-jwt.min.js" dest="${destDir}" />
                             </target>
                         </configuration>
                     </execution>
